# MARC-mars-rover

./: .gitignore  CMakeLists.txt
include/: map.h  moves.h
src/: main.c  map.c
